# AndroidJniHelpers

./: .gitignore  .project  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  POSSIBLE_FEATURES.md  README.md  README.md-e  build.gradle  gradle.properties  settings.gradle  timestamp
app/: CMakeLists.txt  build.gradle
app/src/androidTest/cpp/: DecodedStringTest.cpp  DecodedStringTest.h  JniHelpersTest.h  PersistedObject.cpp
app/src/androidTest/java/us/the/mac/android/jni/helpers/: ByteArrayTest.java  ClassRegistryTest.java  DecodedStringTest.java  JavaClassTest.java  JavaClassUtilsTest.java  JavaExceptionUtilsTest.java  JavaStringArrayTest.java  JavaStringTest.java  JavaThreadUtilsTest.java  NativeObjectTest.java  PersistedObject.java
app/src/main/cpp/: JavaClass.h  NativeObject.h  native-lib.cpp  test-libs.cpp
app/src/main/java/us/the/mac/android/jni/helpers/: DecodedString.java  MainActivity.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/us/the/mac/android/jni/helpers/: ExampleUnitTest.java
demo/: CMakeLists.txt  build.gradle  proguard-rules.pro
demo/src/main/: AndroidManifest.xml
demo/src/main/cpp/: MainRequests.cpp  MainRequests.h  httpbin_root_certificate  native-lib.cpp
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
